Quorum/Library/Tests/TypeCheckerGenerated/Fail/RetAssignIntegerNumObj.quorum
class Main
    action Main
        integer v = Test()
    end

    action Test() returns integer
        Number var
        var:SetValue(5.0)
        return var
    end
end